changes per https://gohugo.io/host-and-deploy/host-on-github-pages/ rec

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,3 +10,7 @@ enableRobotsTXT = false
 
 # Set to "WARNING" so that broken links don't break the build process. Default is "ERROR".
 refLinksErrorLevel = "WARNING"
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
